[tool.poetry]
name = "beamng-mp"
version = "0.1.0"
description = ""
authors = ["Zefanja Jobse <zefanjaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.3.2"
discord-py-slash-command = "^4.2.1"
redis = "^5.0.1"
requests = "^2.31.0"
dnspython = "^2.4.2"
pycountry = "^23.12.7"
discordhealthcheck = "^0.1.1"
dblpy = "^0.4.0"
discordlists-py = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
